<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="36dp"
        android:text="@string/make_choice"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:padding="36dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageButton
            android:id="@+id/rock_button"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/rock"
            android:onClick="playRoshambo"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/rock_button" />

        <ImageButton
            android:id="@+id/paper_button"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/paper"
            android:onClick="playRoshambo"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/paper_button" />

        <ImageButton
            android:id="@+id/scissor_button"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/scissors"
            android:onClick="playRoshambo"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/scissor_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:baselineAligned="false"
        android:paddingHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@+id/result_text"
        android:background="@color/colorPrimary">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/user_move_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/none"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_move_desc"
                app:srcCompat="@mipmap/none" />

            <TextView
                android:id="@+id/user_move_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_move_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/cpu_move_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/none"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cpu_move_desc"
                app:srcCompat="@mipmap/none" />

            <TextView
                android:id="@+id/cpu_move_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpu_move_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>